--- a/src/app/lav-hill/lav-hill.component.html
+++ b/src/app/lav-hill/lav-hill.component.html
@@ -1,1 +1,3 @@
-<app-plant-select [plantName] = "currentPlantName"></app-plant-select>
+<app-plant-select [plantName] = "currentPlantName" 
+                   [locations] = "currentLocations">
+                </app-plant-select>
