--- a/src/app/mudor/mudor.component.html
+++ b/src/app/mudor/mudor.component.html
@@ -1,2 +1,3 @@
 <app-plant-select [plantName] = "currentPlantName" 
-                   [locations] = "currentLocations"></app-plant-select>
+                   [locations] = "currentLocations">
+                </app-plant-select>
