--- a/src/app/plant-select/plant-select.component.html
+++ b/src/app/plant-select/plant-select.component.html
@@ -1,7 +1,8 @@
 <h1> Where is the problem at {{ plantName }} ?</h1>
-<ul>
-    <li *ngFor="let location of locations">
-            It is at the {{ location }}
+<ul class="location-select">
+    <li  *ngFor="let location of locations">
+        <button (click)="onClickMe()"> It is at the {{ location }}</button> 
+        {{clickMessage}}   
     </li>
 </ul>
 
