--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,19 @@ a {
     text-decoration: none;
     color: lightblue;
 }
+
+ul {
+    list-style-type: none;
+}
+
+/** Reset button styles**/
+ button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
