--- a/src/app/plant-select/plant-select.component.html
+++ b/src/app/plant-select/plant-select.component.html
@@ -6,6 +6,21 @@
     </li>
 </ul>
 
+<div>
+    <h1>Sample for the Modal</h1>
+    <p>{{bodyText}}</p>
+    <button (click)="openModal('custom-modal-1')">Open Modal 1</button>
+    <button (click)="openModal('custom-modal-2')">Open Modal 2</button>
+</div>
+
+<app-modal id="custom-modal-1">
+    <h1>A Custom Angular 7 Modal!</h1>
+    <p>Home page text: <input type="text" [(ngModel)]="bodyText" /></p>
+    <button (click)="closeModal('custom-modal-1');">Close</button>
+</app-modal>
+    
+
+
 
 
 
