--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,6 +1,7 @@
-<div class="jw-modal">
-    <div class="jw-modal-body">
+<div class="modal">
+    <div class="modal-body">
         <ng-content></ng-content>
     </div>
 </div>
-<div class="jw-modal-background"></div>
+
+<div class="modal-background"></div>
