--- a/src/app/plant-select/plant-select.component.html
+++ b/src/app/plant-select/plant-select.component.html
@@ -7,7 +7,7 @@
 
 <app-modal id="custom-modal-1">
     <div> What is the problem at the location?</div>
-    <input type="text" placeholder="Enter the problem here">
+    <app-problem-form></app-problem-form>
     <button (click)="closeModal('custom-modal-1');">Close</button>
 </app-modal>
     
