--- a/src/app/problem-form/problem-form.component.html
+++ b/src/app/problem-form/problem-form.component.html
@@ -9,7 +9,7 @@
     </label>
     <label>
         Location:
-        <p>This is the {{ currentPlantName }}</p>
+        <p>This is the {{ plant }} / {{ location }}</p>
     </label>
     <label>
         Complaint: 
