--- a/src/app/plant-select/plant-select.component.scss
+++ b/src/app/plant-select/plant-select.component.scss
@@ -10,3 +10,11 @@
         text-align: center;
     }
 }
+
+.close {
+    width: 15rem;
+    background-color: lightblue;
+    border-radius: 1%;
+    margin: 1% 41%;
+    padding: 0.5rem;
+}
