--- a/src/app/problem-form/problem-form.component.scss
+++ b/src/app/problem-form/problem-form.component.scss
@@ -1,8 +1,39 @@
 input {
-    width: 50em;
+    width: 85vw;
     height: 2em;
-    border-color: lightblue;
     margin: 1em 0em;
     border-width: 0.1em;
     padding: 0.5em;
+}
+
+label {
+    display: inline-block;
+}
+
+h3, h4, p {
+    text-align: center;
+}
+
+.hidden{
+    display: none;
+}
+
+.form-error {
+    p {
+        font-size: 0.5rem;
+        color: red;
+        text-align: left;
+    }
+}
+
+button {
+    width: 15rem;
+    background-color: lightblue;
+    border-radius: 1%;
+    margin: 1% 41%;
+    padding: 0.5rem;
+}
+
+button:disabled {
+    background-color: lightgrey;
 }
