--- a/src/app/view-request/view-request.component.html
+++ b/src/app/view-request/view-request.component.html
@@ -2,12 +2,12 @@
 
 <table>
     <tr>
-        <th>Date Sent</th>
-        <th>Time Sent</th>
-        <th>Request ID</th>
-        <th>Location of Complaint</th>
-        <th>Sender</th>
-        <th>Complaint</th> 
+        <th>Date </th>
+        <th>Time </th>
+        <th>Request ID </th>
+        <th>Location </th>
+        <th>Sender </th>
+        <th>Complaint </th> 
     </tr>
     <tr *ngFor="let a_request of request">
             <td>{{ a_request.date_sent }}</td>
