--- a/src/app/view-request/view-request.component.scss
+++ b/src/app/view-request/view-request.component.scss
@@ -1,18 +1,25 @@
-h1, a, table, th, td {
+h1, a, table {
     text-align: center;
 }
 
 table {
     width: 100%;
-    border: 3px solid black;
     margin: 3rem 0;
     border-collapse: collapse;
+    overflow-y:scroll;
+    height:50vh;
+    display:block;
+    border-top: 1px solid lightblue;
+    border-bottom: 3px solid lightblue;
 }
 
 td, th {
-    padding: 5px;
-    margin: 15px;
-    border: 3px solid black;
+    padding: 5px 20px;
+    text-align: left;
+}
+
+tr {
+    border: 1px solid lightblue;
 }
 
 
