--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ ul {
   }
 
   .go-home {
-    margin: auto;
+    margin: 1rem auto;
     display: block;
     width: 50%;
     text-align: center;
