--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,11 +3,12 @@
 <div class="plant-select" *ngFor="let plant of plants">
 
     <a routerLink="/{{ plant.name }}">
-        There is a problem at {{ plant.name }}
+        <p>There is a problem at {{ plant.name }}</p>
+        
     </a>
   
-</div>
+</div> 
 
-<a class="request" routerLink="/ViewRequest">
+<a class="request-link" routerLink="/ViewRequest">
     View Existing Requests
 </a>
