--- a/src/app/plant-select/plant-select.component.scss
+++ b/src/app/plant-select/plant-select.component.scss
@@ -1,12 +1,31 @@
+@import 'src/more-sass/_variables.scss';
+$border-radius: 5%;
+
 .location-select{
-    background-color: lightsteelblue;
+    background-color: $primaryColor;
     padding: 1em 1em;
+    margin: 0 2rem;
+    border-radius: $border-radius;
 
     li {
-        background-color: lightblue;
+        background-color: $secondColor;
         margin: 1em;
-        padding: 1em;
         color: white;
         text-align: center;
-    }
+        border-radius: 10%;
+
+        button {
+            padding: 1em;
+            border-radius: $border-radius;
+
+            &:hover {
+                background-color: $secondColor + 30;
+            }
+        }
+    } 
+
+}
+
+.close-bttn {
+    @include cute-button();
 }
