--- a/src/app/view-request/view-request.component.html
+++ b/src/app/view-request/view-request.component.html
@@ -1,23 +1,25 @@
 <h1>Existing Service Requests</h1>
 
-<table>
-    <tr>
-        <th>Date </th>
-        <th>Time </th>
-        <th>Request ID </th>
-        <th>Location </th>
-        <th>Sender </th>
-        <th>Complaint </th> 
-    </tr>
-    <tr *ngFor="let a_request of request">
-            <td>{{ a_request.date_sent }}</td>
-            <td>{{ a_request.time_sent }}</td>
-            <td>{{ a_request.request_id }}</td>
-            <td>{{ a_request.location }}</td>
-            <td>{{ a_request.sender }}</td>
-            <td>{{ a_request.complaint }}</td>
-    </tr>
-    
-</table>
+<div class="tb-overflow">
+        <table>
+                <tr>
+                    <th>Date </th>
+                    <th>Time </th>
+                    <th>Request ID </th>
+                    <th>Location </th>
+                    <th>Sender </th>
+                    <th>Complaint </th> 
+                </tr>
+                <tr *ngFor="let a_request of request">
+                        <td>{{ a_request.date_sent }}</td>
+                        <td>{{ a_request.time_sent }}</td>
+                        <td>{{ a_request.request_id }}</td>
+                        <td>{{ a_request.location }}</td>
+                        <td>{{ a_request.sender }}</td>
+                        <td>{{ a_request.complaint }}</td>
+                </tr> 
+            </table>
+</div>
+
 
 <a class="go-home" routerLink="/">Go Home</a>
