--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import 'src/more-sass/_variables.scss';
+@import "../node_modules/rfs/scss";
 
-body, html {
+
+body, html { 
     height: 100%;
     margin: 0 auto;
 }
 
 body {
     font-family: 'Montserrat';
-    font-size: 18px;
+    @include font-size(18px);
+    //font-size: 18px;
     display: flex;
     justify-content: center;
 
 }
 
+h1 {
+    text-align: center;
+}
+
 a {
     text-decoration: none;
-    color: lightblue;
+    color: $primaryColor;
 }
 
 ul {
@@ -32,22 +40,23 @@ ul {
     background-color: transparent;
     width: 100%;
     height: 100%;
-    cursor: pointer;
+    cursor: pointer; 
   }
 
-  .go-home {
-    margin: 1rem auto;
-    display: block;
-    width: 50%;
-    text-align: center;
+button:disabled {
+    background-color: $disabledColor !important;
+}
+
+  // classes that cut across components
+
+.go-home {
+    @include cute-link(); 
 }
 
 .modal-bttn {
-    background-color: lightblue;
-    margin: 1rem auto;
-    display: block;
-    width: 20%;
-    text-align: center;
-    padding: 0.5rem;
-    border-radius: 1%;
+   @include cute-button();
+   @include sm {
+        width: 100%;
+    }
 }
+
