--- a/src/app/plant-select/plant-select.component.html
+++ b/src/app/plant-select/plant-select.component.html
@@ -7,7 +7,7 @@
  
 <app-modal id="custom-modal-1">
     <app-problem-form [currentPlantName] = "plantName"></app-problem-form>
-    <button class="modal-bttn" (click)="closeModal('custom-modal-1');" [routerLink]="['']">Close</button>
+    <button class="modal-bttn" (click)="closeModal('custom-modal-1');" routerLink="/Profile">Close</button>
 </app-modal>
     
 <a class="go-home" routerLink="/">Go Home</a>
