--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,6 @@
 <p>User Profile</p>
 <p>User Name</p>
 <p> Your Service Requests</p>
-<a class="request-link" routerLink="/Home">Make a new Service Request</a>
-<p>Refresh your token </p>
+<a class="request-link" routerLink="/Home">Make a new Service Request Table will go here </a>
+<button (click)="refreshToken()" class="modal-bttn" >Refresh Token</button>
+<button routerLink="/login" (click)="logout()" class="modal-bttn" >Log Out</button>
