--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
         <p>You are logged in as: {{ _UserService.currentUserValue.username }}</p>
         <a routerLink="/Profile"> Profile </a>
         <p>View Service Requests</p>
-        <p>Your Session will expire at {{ _UserService.token_expires }} </p>
+        <p>Your Session will expire at {{ this.token_date }} </p>
     </div>
 </nav>
 
