--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,4 +1,32 @@
+@import 'src/more-sass/_variables.scss';
+//@import "../node_modules/rfs/scss";
+
 nav {
     background-color: darkblue;
     color: white;
+    font-size: 0.8rem;
+    padding: 3rem 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    width: 80vw;
+    box-sizing: border-box;
+
+    a:hover {
+        color: $primaryColor_hover;
+    }
+}
+
+
+.user-info {
+    margin: 0.3rem 0;
+
+    p, h4 {
+        margin: 0.3rem 0;
+    }
+    
+    p { 
+        font-size: 0.5rem;
+    }
 }
