--- a/src/more-sass/_variables.scss
+++ b/src/more-sass/_variables.scss
@@ -2,6 +2,7 @@
 
 // variables
 $primaryColor: lightblue;
+$primaryColor_hover: adjust-color($primaryColor, $lightness: -20);
 $secondColor:  rgb(60, 146, 175);
 $white: white;
 $disabledColor: lightgrey;
