--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,2 +1,22 @@
-<h1>Welcome to the SSGL Service Requests App!</h1>
-<a routerLink="/login">Go to Login</a>
+<div class="landing-body">
+  <div class="top">
+    <div class="accent-top">service requests for</div>
+    <div class="ssgl-group">
+      <div class="ssgl"><span>S</span>ewerage</div>
+      <div class="ssgl"><span>S</span>ystems</div>
+      <div class="ssgl"><span>G</span>hana</div>
+      <div class="ssgl"><span>L</span>td.</div>
+    </div>
+    <div class="accent-bottom">
+      clean environment. <span>green</span> energy.
+    </div>
+    <a routerLink="/login"><div class="enter-link">ENTER</div></a>
+  </div>
+  <div class="bottom">
+    <div class="spacer"></div>
+    <p>
+      This is a simple web application designed to facilitate management of the
+      Mudor and Lavender Hill Plants operated by SSGL.
+    </p>
+  </div>
+</div>
