--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,67 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-@import 'src/more-sass/_variables.scss';
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,400,400i,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap");
+@import "src/more-sass/_variables.scss";
 @import "../node_modules/rfs/scss";
 
-
-body, html { 
-    height: 100%;
-    margin: 0 auto;
+* {
+  box-sizing: border-box;
+}
+body,
+html {
+  height: 100%;
+  margin: 0 auto;
 }
 
 body {
-    font-family: 'Montserrat';
-    @include font-size(18px);
-    //font-size: 18px;
-    display: flex;
-    justify-content: center;
-
+  font-family: "Poppins", sans-serif;
+  @include font-size(18px);
+  //font-size: 18px;
+  display: flex;
+  justify-content: center;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 a {
-    text-decoration: none;
-    color: $primaryColor;
+  text-decoration: none;
+  color: $primaryColor;
+  width: min-content;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 /** Reset button styles**/
- button {
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    cursor: pointer; 
-  }
-
-button:disabled {
-    background-color: $disabledColor !important;
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
-  // classes that cut across components
+button:disabled {
+  background-color: $disabledColor !important;
+}
+
+// classes that cut across components
 
 .go-home {
-    @include cute-link(); 
+  @include cute-link();
 }
 
 .modal-bttn {
-   @include cute-button();
-   @include sm {
-        width: 100%;
-    }
+  @include cute-button();
+  @include sm {
+    width: 100%;
+  }
 }
 
 .fancy {
-    @include fancy-font;
-    text-align: center;
+  @include fancy-font;
+  text-align: center;
 }
-
