--- a/src/more-sass/_variables.scss
+++ b/src/more-sass/_variables.scss
@@ -11,7 +11,7 @@ $disabledColor: lightgrey;
 $white: white;
 
 // element cuteness
-$textShadow: 1px 1px 3px #aaa;
+$textShadow: 1px 1px 2px rgba(43, 41, 41, 0.212);
 $boxShadow: 3px 1px 3px rgba(43, 41, 41, 0.212);
 $displayPadding: 2rem;
 
